# searchv2

./: .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  test_flow.py  test_pdf_generation.py
db/: chroma.sqlite3
db/d026a01c-e960-4461-8be6-e96e03e99676/: index_metadata.pickle
src/crewai_storage/: latest_kickoff_task_outputs.db  long_term_memory_storage.db
src/crewai_storage/entities/Interviewer_Researcher_Diagnostician_Reporter_Validator/: chroma.sqlite3
src/crewai_storage/entities/Interviewer_Researcher_Reporter_Validator/: chroma.sqlite3
src/crewai_storage/short_term/Interviewer_Researcher_Diagnostician_Reporter_Validator/: chroma.sqlite3
src/crewai_storage/short_term/Interviewer_Researcher_Reporter_Validator/: chroma.sqlite3
src/searchv2/: __init__.py  crew.py  firebase_utils.py  main.py  session.py  session_manager.py
src/searchv2/config/: agents.yaml  tasks.yaml
src/searchv2/db/: chroma.sqlite3
src/searchv2/tools/: __init__.py  communicator_tool.py  conversation_log_reader_tool.py  human_input_tool.py  report_generation_tool.py  serper_tool.py  trusted_medical_search_tool.py
tests/: test_report_generation.py
