[project]
name = "searchv2"
version = "0.1.0"
description = "searchv2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "google-generativeai>=0.8.5",
    "langchain-huggingface>=0.2.0",
    "reportlab>=4.0.0",
]

[project.scripts]
searchv2 = "searchv2.main:run"
run_crew = "searchv2.main:run"
train = "searchv2.main:train"
replay = "searchv2.main:replay"
test = "searchv2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
